<resources>
    <string name="app_name">My Flicks</string>
    <string name="todo">TODO</string>
    <string name="popular">Most Popular Movies</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="playing">Movies Now Playing</string>
    <string name="textview">TextView</string>
    <string name="movie_trailers">Movie Trailers</string>
    <string name="comment">This is a comment Image</string>
    <string name="Comments">Comments</string>
    <string name="play_video">Play Video</string>
    <string name="button">Button</string>
    <string name="favoritesScreenTitle">My Favorites</string>
    <string name="movieTrailerScreenTitle">Movie Trailer</string>
    <string name="movieDetailScreenTitle">Movie Details</string>
</resources>
